fixed home-page text align

--- a/src/app/good-deeds-details/good-deeds-details.component.css
+++ b/src/app/good-deeds-details/good-deeds-details.component.css
@@ -4,7 +4,7 @@
 }
 .header-class{
   font-family: "Arial";
-  font-size: 1.7vh;
+  font-size: 1.8vh;
   text-align: left;
 }
 
