--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -16,7 +16,8 @@
 }
 
 .home-padding{
-  padding-right: 60px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .carousel-style{
